--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <body>
     <header>
-      <h1>📘 The Code Magazine</h1>
+      <h1>📘 The Code Magazine - Project</h1>
 
       <nav>
         <a href="blog.html">Blog</a>
